syntax = "proto3";

package CareerCloud.gRPC.Services;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "Protos/Common.proto";

option csharp_namespace = "CareerCloud.gRPC.Services";

service SecurityLoginProvider{
	rpc GetSecurityLogins (google.protobuf.Empty) returns (SecurityLoginList);
	rpc GetSecurityLogin (CareerCloud.gRPC.Common.IdRequest) returns (SecurityLoginProto);
	rpc PostSecurityLogin (SecurityLoginList) returns (CareerCloud.gRPC.Common.BoolReply);
	rpc PutSecurityLogin (SecurityLoginList) returns (CareerCloud.gRPC.Common.BoolReply);
	rpc DeleteSecurityLogin (SecurityLoginList) returns (CareerCloud.gRPC.Common.BoolReply);
}

message SecurityLoginProto {
	string id =1;
	string login =2;
	string password =3;
	google.protobuf.Timestamp created =4;
	google.protobuf.Timestamp password_update =5;
	google.protobuf.Timestamp agreement_accepted =6;
	bool is_locked =7;
	bool is_inactive =8;
	string email_address =9;
	string phone_number =10;
	string full_name =11;
	bool force_change_password =12;
	string prefferred_language =13;
    bytes time_stamp =14;
}

message SecurityLoginList {
    repeated SecurityLoginProto security_logins = 1; 
}
